// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/FontSize Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="font-size"
      style={
        Object {
          "fontSize": "14px",
        }
      }
    >
      Woodland lasted crowned holiday pirate brother wrath.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-size-base)
      </span>
      <span
        className="label"
      >
        14px
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/FontSize Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="font-size"
      style={
        Object {
          "fontSize": "14px",
        }
      }
    >
      Woodland lasted crowned holiday pirate brother wrath.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-size-base)
      </span>
      <span
        className="label"
      >
        14px
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-size"
      style={
        Object {
          "fontSize": "1.2rem",
        }
      }
    >
      Woodland lasted crowned holiday pirate brother wrath.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-size-xs)
      </span>
      <span
        className="label"
      >
        1.2rem
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-size"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      Woodland lasted crowned holiday pirate brother wrath.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-size-sm)
      </span>
      <span
        className="label"
      >
        1.4rem
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-size"
      style={
        Object {
          "fontSize": "1.6rem",
        }
      }
    >
      Woodland lasted crowned holiday pirate brother wrath.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-size-md)
      </span>
      <span
        className="label"
      >
        1.6rem
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-size"
      style={
        Object {
          "fontSize": "1.8rem",
        }
      }
    >
      Woodland lasted crowned holiday pirate brother wrath.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-size-lg)
      </span>
      <span
        className="label"
      >
        1.8rem
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-size"
      style={
        Object {
          "fontSize": "2.2rem",
        }
      }
    >
      Woodland lasted crowned holiday pirate brother wrath.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-size-xl)
      </span>
      <span
        className="label"
      >
        2.2rem
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-size"
      style={
        Object {
          "fontSize": "6rem",
        }
      }
    >
      Woodland lasted crowned holiday pirate brother wrath.
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-size-2xl)
      </span>
      <span
        className="label"
      >
        6rem
      </span>
    </div>
  </div>
</div>
`;
